# meta-agent-runtime

./: .gitignore  PROJECT.md  README.en.md  README.md  agent_runtime_design.en.md  agent_runtime_design.md  agent_runtime_design_raw.en.md  agent_runtime_design_raw.md
benchmark/swe_bench_verified/: __main__.py  cli.py  config.py  evaluate.py  predictions.py  pyproject.toml  runner.py  test_benchmark.py
benchmark/swe_bench_verified/datasets/: verified_smoke.jsonl  verified_smoke.txt
docs/: claude-code-sourcemap.migration.en.md  claude-code-sourcemap.migration.zh.md  goose_migration_report.en.md  goose_migration_report.zh.md  ii-agent-migration-report.en.md  ii-agent-migration-report.zh.md  migration.en.md  migration.md  migration.zh.md  opencode-migration.en.md  opencode-migration.zh.md  openhands_migration_status.en.md  openhands_migration_status.zh.md  pi-mono-migration.en.md  pi-mono-migration.zh.md  swe-bench-benchmark-config.en.md  swe-bench-benchmark-config.zh.md
eval/: pyproject.toml
eval/agent_runtime_client/: __init__.py  client.py  demo.py  types.py
eval/analysis/: metrics.py  plots.py
eval/experiments/: ablation.py  swebench_runner.py
eval/tests/: test_client.py
runtime/: package-lock.json  package.json  tsconfig.json
runtime/tests/: claudeCodeSourcemap.test.ts  clineAdapter.test.ts  gooseAdapter.test.ts  iiAgentAdapter.test.ts  openaiClient.test.ts  opencodeAdapter.test.ts  openhands.test.ts  parsers.test.ts  piMonoAdapter.test.ts  runtime.test.ts  runtimeCoreAlignment.test.ts  searchTool.test.ts  serverContract.test.ts  slidingWindow.test.ts  (+1 more)
(+45 files in other folders)
