[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-agent-runtime-eval"
version = "0.1.0"
description = "Python client and experiment helpers for the Meta Agent Runtime"
dependencies = ["httpx>=0.27"]

[tool.setuptools.packages.find]
include = ["agent_runtime_client*"]

